PLF-7188 : use JDK_JAVA_OPTIONS to pass JDK 9 options and add add-opens options to avoid warning for illegal access